import static Assert